--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1 class="won text-center">YOU WON</h1>
     <div class="circle-wrapper">
         <div class="circle">
             <div class="colors-wrapper">
                 <div class="btn colors green"></div>
                 <div class="btn colors red"></div>
                 <br>
-                <div class="btn colors btn-info yellow"></div>
+                <div class="btn colors yellow"></div>
                 <div class="btn colors blue"></div>
             </div>
             
